[package]
name = "rtreap"
version = "0.1.0"
edition = "2021"
authors = ["herrsmitty8128@gmail.com"]
license = "MIT"
description = ""
documentation = ""
repository = ""
keywords = ["treap","collection"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
